--- a/JCGS_Writeup/bibliography.bib
+++ b/JCGS_Writeup/bibliography.bib
@@ -1,50 +1,3 @@
-@article{wickhamVisualizingStatisticalModels2015,
-  title = {Visualizing Statistical Models: {{Removing}} the Blindfold},
-  author = {Wickham, Hadley and Cook, Dianne and Hofmann, Heike},
-  year = {2015},
-  journal = {Statistical Analysis and Data Mining: The ASA Data Science Journal},
-  volume = {8},
-  number = {4},
-  pages = {203--225},
-  publisher = {Wiley Subscription Services, Inc., A Wiley Company Hoboken},
-  doi = {10.1002/sam.11271},
-  keywords = {classification,data mining,exploratory data analysis,high-dimensional data,model visualization}
-}
-
-@article{clevelandRobustLocallyWeighted1979,
-  title = {Robust {{Locally Weighted Regression}} and {{Smoothing Scatterplots}}},
-  author = {Cleveland, William S.},
-  year = {1979},
-  month = dec,
-  journal = {Journal of the American Statistical Association},
-  volume = {74},
-  number = {368},
-  pages = {829--836},
-  issn = {0162-1459},
-  doi = {10.1080/01621459.1979.10481038},
-  urldate = {2024-11-14},
-  abstract = {The visual information on a scatterplot can be greatly enhanced, with little additional cost, by computing and plotting smoothed points. Robust locally weighted regression is a method for smoothing a scatterplot, (x i , y i ), i = 1, {\dots}, n, in which the fitted value at z k is the value of a polynomial fit to the data using weighted least squares, where the weight for (x i , y i ) is large if x i is close to x k and small if it is not. A robust fitting procedure is used that guards against deviant points distorting the smoothed points. Visual, computational, and statistical issues of robust locally weighted regression are discussed. Several examples, including data on lead intoxication, are used to illustrate the methodology.},
-  keywords = {Graphics,Nonparametric regression,Robust estimation,Scatterplots,Smoothing}
-}
-
-@article{chenFiredBulletSignature2019,
-  title = {Fired Bullet Signature Correlation Using the {{Congruent Matching Profile Segments}} ({{CMPS}}) Method},
-  author = {Chen, Zhe and Chu, Wei and Soons, Johannes A. and Thompson, Robert M. and Song, John and Zhao, Xuezeng},
-  year = {2019},
-  month = dec,
-  journal = {Forensic Science International},
-  volume = {305},
-  pages = {109964},
-  issn = {0379-0738},
-  doi = {10/gn649n},
-  urldate = {2020-03-25},
-  abstract = {We introduce the Congruent Matching Profile Segments (CMPS) method for objective comparison of striated tool marks and apply it to bullet signature correlations. The method is derived from the congruent matching cell (CMC) method developed for the comparison of impressed tool marks. The proposed method is designed to increase comparison accuracy by addressing the comparison challenges caused by striae profiles with different lateral scales, varying vertical (height) scales, and sections that are poorly marked or have little to no similarity. Instead of correlating the entire profiles extracted from striated tool marks, the method divides one of the compared profiles into segments. Each segment is then correlated with the other profile. The CMPS method uses the normalized cross-correlation function with multiple correlation peak inspection to determine the number of profile segments that have both significant topography similarity and a congruent registration position. Initial tests were performed on the land engraved areas (LEAs) of 35 bullets fired from 10 consecutively manufactured pistol barrels. The results show clear separation between the CMPS scores of the 549 known non-matching (KNM) LEA profiles and the 46 known matching (KM) LEA profiles. These results are an improvement over those obtained using the correlation coefficient score of whole profiles. The large number of CMPS segment correlations may facilitate a statistical approach to error rate estimations.},
-  langid = {english},
-  keywords = {CMPS,Congruent matching,Firearm identification,Forensic science,Profile segment,Tool mark},
-  annotation = {00001}
-}
-
-
 @article{afte,
   title = {The Association of Firearm and Tool Mark Examiners: {{Theory}} of Identification as It Relates to Toolmarks},
   author = {{AFTE}},
@@ -54,6 +7,24 @@
   number = {1},
   pages = {86--88},
   keywords = {No DOI found}
+}
+
+@book{nas2009,
+  title = {National Research Council: {{Strengthening}} Forensic Science in the United States: {{A}} Path Forward},
+  author = {{NRC}},
+  year = {2009},
+  publisher = {National Academies Press}
+}
+
+@book{pcast,
+  title = {President's Council of Advisors on Science and Technology: {{Forensic}} Science in Criminal Courts: {{Ensuring}} Scientific Validity of Feature-Comparison Methods},
+  author = {{President's Council of Advisors on Science and Technology}},
+  year = {2016},
+  month = sep,
+  publisher = {Executive Office of the President of the United States, President's Council},
+  address = {Washington, D.C.},
+  url = {https://obamawhitehouse.archives.gov/sites/default/files/microsites/ostp/PCAST/pcast\_forensic\_science\_report\_final.pdf},
+  shortauthor = {PCAST}
 }
 
 @article{carriquiryMachineLearningForensic2019,
@@ -67,9 +38,23 @@
   issn = {1740-9713},
   doi = {10.1111/j.1740-9713.2019.01252.x},
   urldate = {2023-02-24},
-  abstract = {The 2009 National Academy of Sciences report found pattern-evidence disciplines to be rife with subjectivity. In the decade since, machine learning methods have been developed to try to address that issue. By Alicia Carriquiry, Heike Hofmann, Xiao Hui Tai and Susan VanderPlas.},
+  langid = {english}
+}
+
+@article{chenFiredBulletSignature2019,
+  title = {Fired Bullet Signature Correlation Using the {{Congruent Matching Profile Segments}} ({{CMPS}}) Method},
+  author = {Chen, Zhe and Chu, Wei and Soons, Johannes A. and Thompson, Robert M. and Song, John and Zhao, Xuezeng},
+  year = {2019},
+  month = dec,
+  journal = {Forensic Science International},
+  volume = {305},
+  pages = {109964},
+  issn = {0379-0738},
+  doi = {10/gn649n},
+  urldate = {2020-03-25},
   langid = {english},
-  file = {/Users/hofmann/Zotero/storage/FEJZ5Y33/Carriquiry et al. - 2019 - Machine Learning in Forensic Applications.pdf;/Users/hofmann/Zotero/storage/RC5HUVVY/Carriquiry et al. - 2019 - Machine learning in forensic applications.pdf;/Users/hofmann/Zotero/storage/XFYWKJZC/j.1740-9713.2019.01252.html}
+  keywords = {CMPS,Congruent matching,Firearm identification,Forensic science,Profile segment,Tool mark},
+  annotation = {00001}
 }
 
 @article{chuAutomaticIdentificationBullet2013,
@@ -85,51 +70,9 @@
   issn = {03790738},
   doi = {10/gn65cz},
   urldate = {2018-08-07},
-  abstract = {The consecutive matching striae (CMS) numeric criteria for firearm and toolmark identifications have been widely accepted by forensic examiners, although there have been questions concerning its observer subjectivity and limited statistical support. In this paper, based on signal processing and extraction, a model for the automatic and objective counting of CMS is proposed. The position and shape information of the striae on the bullet land is represented by a feature profile, which is used for determining the CMS number automatically. Rapid counting of CMS number provides a basis for ballistics correlations with large databases and further statistical and probability analysis. Experimental results in this report using bullets fired from ten consecutively manufactured barrels support this developed model.},
   langid = {english},
   keywords = {consecutive matching striae,feature profile,forensic science,identification criteria,toolmark identification,topography measurement},
-  annotation = {00017},
-  file = {/Users/hofmann/Zotero/storage/Q9YH29LY/Chu et al. - 2013 - Automatic identification of bullet signatures base.pdf}
-}
-
-@article{hareAutomaticMatchingBullet2017,
-  title = {Automatic Matching of Bullet Land Impressions},
-  author = {Hare, Eric and Hofmann, Heike and Carriquiry, Alicia and others},
-  year = {2017},
-  journal = {The Annals of Applied Statistics},
-  volume = {11},
-  number = {4},
-  pages = {2332--2356},
-  publisher = {Institute of Mathematical Statistics},
-  doi = {10.1214/17-AOAS1080},
-  keywords = {3D topological surface measurement,cross-correlation function,data visualization,feature importance,machine learning,No DOI found,Statistics - Applications},
-  annotation = {00012},
-  file = {/Users/hofmann/Zotero/storage/AMXFQ99N/Hare et al_2016_Automatic Matching of Bullet Land Impressions.pdf;/Users/hofmann/Zotero/storage/HDET5CMF/Hare et al_2017_Automatic matching of bullet land impressions.pdf;/Users/hofmann/Zotero/storage/2QDDJEKJ/1514430288.html;/Users/hofmann/Zotero/storage/4TCIBDB9/1601.html}
-}
-
-@manual{hofmannBulletxtrctrAutomaticMatching2022,
-  type = {Manual},
-  title = {Bulletxtrctr: {{Automatic}} Matching of Bullet Striae},
-  author = {Hofmann, Heike and Vanderplas, Susan and Ju, Will and Krishnan, Ganesh},
-  year = {2022},
-  url = {https://github.com/heike/bulletxtrctr}
-}
-
-@article{juJournalOpenSourceImplementation2022,
-  title = {The {{R Journal}}: {{An Open-Source Implementation}} of the {{CMPS Algorithm}} for {{Assessing Similarity}} of {{Bullets}}},
-  shorttitle = {The {{R Journal}}},
-  author = {Ju, Wangqian and Hofmann, Heike},
-  year = {2022},
-  month = oct,
-  journal = {The R Journal},
-  volume = {14},
-  number = {2},
-  pages = {267--285},
-  issn = {2073-4859},
-  doi = {10.32614/RJ-2022-035},
-  urldate = {2023-12-13},
-  abstract = {In this paper, we introduce the R package cmpsR, an open-source implementation of the Congruent Matching Profile Segments (CMPS) method developed at the National Institute of Standards and Technology (NIST) for objective comparison of striated tool marks. The functionality of the package is showcased by examples of bullet signatures that come with the package. Graphing tools are implemented in the package as well for users to assess and understand the CMPS results. Initial tests were performed on bullet signatures generated from two sets of 3D scans in the Hamby study under the framework suggested by the R package `bulletxtrctr`. New metrics based on CMPS scores are introduced and compared with existing metrics. A measure called sum of squares ratio is included, and how it can be used for evaluating different scans, metrics, or parameters is showcased with the Hamby study data sets. An open-source implementation of the CMPS algorithm makes the algorithm more accessible, generates reproducible results, and facilitates further studies of the algorithm such as method comparisons.},
-  file = {/Users/hofmann/Zotero/storage/HXSLLT7I/Ju and Hofmann - 2022 - The R Journal An Open-Source Implementation of th.pdf}
+  annotation = {00017}
 }
 
 @article{juOpenSourceImplementationCMPS2022,
@@ -143,28 +86,7 @@
   pages = {267--285},
   issn = {2073-4859},
   doi = {10.32614/RJ-2022-035},
-  urldate = {2024-10-18},
-  abstract = {In this paper, we introduce the R package cmpsR, an open-source implementation of the Congruent Matching Profile Segments (CMPS) method developed at the National Institute of Standards and Technology (NIST) for objective comparison of striated tool marks. The functionality of the package is showcased by examples of bullet signatures that come with the package. Graphing tools are implemented in the package as well for users to assess and understand the CMPS results. Initial tests were performed on bullet signatures generated from two sets of 3D scans in the Hamby study under the framework suggested by the R package `bulletxtrctr`. New metrics based on CMPS scores are introduced and compared with existing metrics. A measure called sum of squares ratio is included, and how it can be used for evaluating different scans, metrics, or parameters is showcased with the Hamby study data sets. An open-source implementation of the CMPS algorithm makes the algorithm more accessible, generates reproducible results, and facilitates further studies of the algorithm such as method comparisons.},
-  file = {/Users/hofmann/Zotero/storage/8FHV2MWW/Ju and Hofmann - 2022 - An Open-Source Implementation of the CMPS Algorith.pdf}
-}
-
-@book{nas2009,
-  title = {National Research Council: {{Strengthening}} Forensic Science in the United States: {{A}} Path Forward},
-  author = {{NRC}},
-  year = {2009},
-  publisher = {National Academies Press},
-  file = {/Users/hofmann/Zotero/storage/RINAW2WD/NRC - 2009 - National research council Strengthening forensic science in the united states A path forward.pdf}
-}
-
-@book{pcast,
-  title = {President's Council of Advisors on Science and Technology: {{Forensic}} Science in Criminal Courts: {{Ensuring}} Scientific Validity of Feature-Comparison Methods},
-  author = {{President's Council of Advisors on Science and Technology}},
-  year = {2016},
-  month = sep,
-  publisher = {Executive Office of the President of the United States, President's Council},
-  address = {Washington, D.C.},
-  shortauthor = {PCAST},
-  file = {/Users/hofmann/Zotero/storage/8WLHGJWC/pcast_forensic_science_report_final.pdf}
+  urldate = {2024-10-18}
 }
 
 @article{vorburgerApplicationsCrosscorrelationFunctions2011,
@@ -179,11 +101,9 @@
   issn = {00431648},
   doi = {10.1016/j.wear.2010.03.030},
   urldate = {2018-10-09},
-  abstract = {We describe several examples where we use cross-correlation functions to quantify the similarity of 2D surface profiles or of 3D areal surface topography images. The applications have included (1) the manufacture of standard reference material (SRM) bullets and casings, (2) methods to assess whether bullets or casings have been fired by the same firearm, and (3) research to quantify similarities or differences between profiles of the same surface measured by different techniques or between a master surface and its replicas. The cross-correlation maximum is the functional parameter used to quantify similarity. A second parameter, called the relative profile (2D) difference or relative areal topography (3D) difference, may also be used to quantify differences and to recognize the ambiguous condition when two results have different vertical (z-) scales but identical shapes. Most of these examples have been applied in support of ballistics inspection methods in crime labs, but the methods are generally useful for estimating the accuracy of surface replication techniques or the ability of different surface topography instruments to measure the same surface and provide the same result. The instruments used in these studies were a stylus instrument and a Nipkow-disk type confocal microscope. Cross-correlation functions may also be used to assess differences resulting from the use of different filters to modify the same surface profile or topography image.},
   langid = {english},
   keywords = {ccf},
-  annotation = {00016},
-  file = {/Users/hofmann/Zotero/storage/9XNWTWTQ/Vorburger et al. - 2011 - Applications of cross-correlation functions.pdf}
+  annotation = {00016}
 }
 
 @article{vorburgerTopographyMeasurementsApplications2015,
@@ -199,26 +119,119 @@
   doi = {10/gn65bq},
   urldate = {2018-10-10},
   langid = {english},
-  annotation = {00011},
-  file = {/Users/hofmann/Zotero/storage/FL9KUP2X/Vorburger et al. - 2016 - Topography measurements and applications in ballis.pdf;/Users/hofmann/Zotero/storage/M7CX2TZB/Vorburger et al. - 2015 - Topography measurements and applications in ballis.pdf}
+  annotation = {00011}
 }
 
-@article{willsLinkedDataViews2008,
-  title = {Linked Data Views},
-  author = {Wills, Graham},
-  year = {2008},
-  publisher = {Handbook of Data Visualization},
-  doi = {10.1007/978-3-540-33037-0_10},
-  keywords = {Data View, Dynamic Graphic, National League, Salary Data, Summary Function}
-  file = {}
+@article{wickhamVisualizingStatisticalModels2015,
+  title = {Visualizing Statistical Models: {{Removing}} the Blindfold},
+  author = {Wickham, Hadley and Cook, Dianne and Hofmann, Heike},
+  year = {2015},
+  journal = {Statistical Analysis and Data Mining: The ASA Data Science Journal},
+  volume = {8},
+  number = {4},
+  pages = {203--225},
+  publisher = {Wiley Subscription Services, Inc., A Wiley Company Hoboken},
+  doi = {10.1002/sam.11271},
+  keywords = {classification,data mining,exploratory data analysis,high-dimensional data,model visualization}
 }
 
 @article{eickHighInteractionGraphics1995,
-  title = {High interaction Graphics,
-  author = {Eick, Stephen G., and Graham J. Wills},
-  year = {},
-  publisher = {},
-  doi = {},
-  keywords = {}
-  file = {}
+  title = {High Interaction Graphics},
+  author = {Eick, Stephen G. and Wills, Graham J.},
+  year = {1995},
+  month = mar,
+  journal = {European Journal of Operational Research},
+  volume = {81},
+  number = {3},
+  pages = {445--459},
+  issn = {0377-2217},
+  doi = {10.1016/0377-2217(94)00188-I},
+  urldate = {2024-12-12},
+  keywords = {Computing,Exploratory data analysis,Interactive graphics}
+}
+
+@article{swayneIntroductionSpecialIssue1999,
+  title = {Introduction to the Special Issue on Interactive Graphical Data Analysis: {{What}} Is Interaction ?},
+  shorttitle = {Introduction to the Special Issue on Interactive Graphical Data Analysis},
+  author = {Swayne, Deborah F. and Klinke, Sigbert},
+  year = {1999},
+  month = mar,
+  journal = {Comput. Stat.},
+  volume = {14},
+  number = {1},
+  pages = {1--6},
+  issn = {0943-4062},
+  doi = {10.1007/PL00022700},
+  urldate = {2024-11-23}
+}
+
+@article{urbanekIPlotsEXtremeNextgeneration2011,
+  title = {{{iPlots eXtreme}}: Next-Generation Interactive Graphics Design and Implementation of Modern Interactive Graphics},
+  shorttitle = {{{iPlots eXtreme}}},
+  author = {Urbanek, Simon},
+  year = {2011},
+  month = sep,
+  journal = {Computational Statistics},
+  volume = {26},
+  number = {3},
+  pages = {381--393},
+  issn = {1613-9658},
+  doi = {10.1007/s00180-011-0240-x},
+  urldate = {2025-03-12},
+  langid = {english},
+  keywords = {Data analysis,Interactive graphics,Software}
+}
+
+@incollection{willsLinkedDataViews2008,
+  title = {Linked {{Data Views}}},
+  booktitle = {Handbook of {{Data Visualization}}},
+  author = {Wills, Graham},
+  editor = {Chen, Chun-houh and H{\"a}rdle, Wolfgang and Unwin, Antony},
+  year = {2008},
+  pages = {217--241},
+  publisher = {Springer},
+  address = {Berlin, Heidelberg},
+  doi = {10.1007/978-3-540-33037-0_10},
+  urldate = {2024-11-23},
+  isbn = {978-3-540-33037-0},
+  langid = {english},
+  keywords = {Data View,Dynamic Graphic,National League,Salary Data,Summary Function}
+}
+
+@article{hareAutomaticMatchingBullet2017,
+  title = {Automatic Matching of Bullet Land Impressions},
+  author = {Hare, Eric and Hofmann, Heike and Carriquiry, Alicia and others},
+  year = {2017},
+  journal = {The Annals of Applied Statistics},
+  volume = {11},
+  number = {4},
+  pages = {2332--2356},
+  publisher = {Institute of Mathematical Statistics},
+  doi = {10.1214/17-AOAS1080},
+  keywords = {3D topological surface measurement,cross-correlation function,data visualization,feature importance,machine learning,No DOI found,Statistics - Applications},
+  annotation = {00012}
+}
+
+@manual{hofmannBulletxtrctrAutomaticMatching2022,
+  type = {Manual},
+  title = {Bulletxtrctr: {{Automatic}} Matching of Bullet Striae},
+  author = {Hofmann, Heike and Vanderplas, Susan and Ju, Will and Krishnan, Ganesh},
+  year = {2022},
+  url = {https://github.com/heike/bulletxtrctr}
+}
+
+@article{clevelandRobustLocallyWeighted1979,
+  title = {Robust {{Locally Weighted Regression}} and {{Smoothing Scatterplots}}},
+  author = {Cleveland, William S.},
+  year = {1979},
+  month = dec,
+  journal = {Journal of the American Statistical Association},
+  volume = {74},
+  number = {368},
+  pages = {829--836},
+  publisher = {ASA Website},
+  issn = {0162-1459},
+  doi = {10.1080/01621459.1979.10481038},
+  urldate = {2024-11-14},
+  keywords = {Graphics,Nonparametric regression,Robust estimation,Scatterplots,Smoothing}
 }
