research council as an author

--- a/JCGS_Writeup/bibliography.bib
+++ b/JCGS_Writeup/bibliography.bib
@@ -10,8 +10,8 @@
 }
 
 @book{nas2009,
-  title = {National Research Council: {{Strengthening}} Forensic Science in the United States: {{A}} Path Forward},
-  author = {{NRC}},
+  title = {{{Strengthening}} Forensic Science in the United States: {{A}} Path Forward},
+  author = {{National Research Council}},
   year = {2009},
   publisher = {National Academies Press}
 }
